bpo-27385: Clarify docstring for groupby() (#3738)